# Advanced_Programming

./: README.md
Homeworks/: README_HW.md
Homeworks/Homework_1/: README_HW1.md  SparseMatrixBase.h  SparseMatrixCOO.h  SparseMatrixCSR.h  main.cpp  sparse_matrix
env/: pyvenv.cfg  requirements.txt
testing_simulations/: README.md
testing_simulations/SIM1/: part1.md
testing_simulations/SIM1/project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  matrix_app  testing.py
testing_simulations/SIM1/project/bindings/: pybind_module.cpp
testing_simulations/SIM1/project/include/: DiagonalMatrix.h  Matrix.h  SquareMatrix.h
testing_simulations/SIM1/project/src/: DiagonalMatrix.cpp  Matrix.cpp  SquareMatrix.cpp
testing_simulations/SIM2/final_project/SIM2_Andrea/: CMakeLists.txt  README.txt  TestingEnvSetup.sh
testing_simulations/SIM2/project_sim2/: CMakeLists.txt  FE_test  Readme.txt  main.cpp  results.txt  test_pe.py
testing_simulations/SIM2/project_sim2_2/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bindings.cpp  cmake_install.cmake  forward_euler.h  helloworld.h  lotka_volterra_results.csv  lotka_volterra_solution.csv  main  main.cpp  test.py
testing_simulations/SIM2_remake/: Compile.sh  test_pe.py
testing_simulations/SIM2_remake_2/: ForwardEuler.h  README.txt
testing_simulations/simulation_exam/project/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  grad_test  gradient_descent.cpp  main.cpp  optimization_problem.h  pybind_module.cpp  quadratic_optimization_problem.h  test_solver.py
testing_simulations/simulation_exam/project_exam/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bindings.cpp  cmake_install.cmake  file.md  gradient_descent.cpp  gradient_descent.h  linear_regression.h  main  main.cpp  optimization_problem.h  quadratic_optimization.h  test.py
testing_simulations/simulation_exam/project_exam/env/: pyvenv.cfg
